export default {
  signIn: 'SignIn',
  profile: 'Profile',
}
